<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"
    android:paddingTop="32dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numeroTarjetaLayout"
        style="@style/InputBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorButtonText"
        android:hint="@string/hint_text_numero_referencia"
        android:textColorHint="@color/colorSecondaryText"
        app:boxCornerRadiusTopStart="10dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numeroTarjetaTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/colorPrimaryText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tarjetahabienteLayout"
        style="@style/InputBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorButtonText"
        android:hint="@string/hint_text_tarjetahabiente"
        android:textColorHint="@color/colorSecondaryText"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tarjetahabienteTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryText" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fechaExpiracionLayout"
        style="@style/InputBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorButtonText"
        android:hint="@string/hint_text_fecha_expiracion"
        android:textColorHint="@color/colorSecondaryText"
        app:boxCornerRadiusTopStart="10dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fechaExpiracionTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="353dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numeroCCVLayout"
        style="@style/InputBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorButtonText"
        android:hint="@string/hint_text_numero_CCV"
        android:textColorHint="@color/colorSecondaryText"
        app:boxCornerRadiusTopStart="10dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numeroCCVTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/colorPrimaryText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/montoLayout"
        style="@style/InputBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorButtonText"
        android:hint="@string/hint_text_monto"
        android:textColorHint="@color/colorSecondaryText"
        app:boxCornerRadiusTopStart="10dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/montoTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/colorPrimaryText" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_confirmar"
        style="@style/ButtonBasic"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/text_button_confirmar" />

</LinearLayout>